<resources>
    <string name="app_name">cutpet</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_cangos">Listado Usuarios</string>
    <string name="title_activity_main_users">Añadir Usuario</string>
    <string name="title_activity_main_pets">Añadir Mascotas</string>
    <string name="title_activity_list_pets">Listado Mascotas</string>
    <string name="Campo1">Nombre</string>
    <string name="Campo2">Dirección</string>
    <string name="Campo3">Teléfono</string>
    <string name="Campo4">Correo Electrónico</string>
    <string name="MainCangosButton1">Gestionar Usuarios</string>
    <string name="MainCangosButton2">Gestionar Mascotas</string>
    <string name="MainPetsField1">Nombre Mascota</string>
    <string name="MainPetsField2">Edad Mascota</string>
    <string name="ok">Aceptar</string>
    <string name="ko">Cancelar</string>
    <string name="toPet">Mascota >></string>
    <string name="toService">Servicio >></string>
    <string name="toUser">Usuario >></string>
    <string name="AgePetString">Edad Mascota</string>
    <string name="RacePetString">Raza Mascota</string>
    <string name="WeightPetString">Peso Mascota</string>
    <string name="title_activity_list_services">Listado Servicios</string>
    <string name="title_activity_main_services">Añadir Servicios</string>
    <string name="hintaddservices">Insert service date...</string>
    <string name="hintaddpets">Insert pet...</string>
    <string name="hintsearhuser">Search user...</string>
    <string name="hintsearchservices">Search Service...</string>
    <string name="hintsearchpet">Search pet...</string>
    <string name="stripping">Stripping</string>
    <string name="scissors">Tall a tisora</string>
    <string name="mechanical_cut">Tall a màquina</string>
    <string name="arreglos">Arreglos</string>
    <string name="anexos">Anexos</string>
    <string name="nusos">Nusos (suplement)</string>
    <string name="muda">Muda</string>
    <string name="arreglos_stripping">Arreglos de Stripping</string>
    <string name="washing">Rentat</string>
    <string name="desparasitar">Desparasitar</string>
    <string name="acondicioner">Acondicionador</string>
    <string name="mouth_clean">Higiene Bucal</string>
    <string name="nails">Tall d\'ungles</string>
    <string name="buidat_glandules">Buidat de Glandules</string>
    <string name="anals">Anals</string>
    <string name="colone">Colonia</string>
    <string name="higiene_auricular">Higiene Auricular</string>
    <string name="group_checkbox_1">Grupo 1</string>
    <string name="group_checkbox_2">Grupo 2</string>
    <string name="group_checkbox_3">Grupo 3</string>
    <string name="observations">Observaciones</string>
</resources>