<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/ic_action_cut"
    android:gravity="fill_vertical"
    tools:ignore="UselessLeaf"
    android:id="@+id/cangos">

    <EditText
        android:id="@+id/NamePetField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:hint="@string/MainPetsField1"
        android:layout_below="@+id/addbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/RacePetField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/RacePetString"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:layout_below="@+id/WeightPetField"
        android:layout_alignRight="@+id/cleanfields"
        android:layout_alignEnd="@+id/cleanfields" />

    <ImageButton
        android:id="@+id/addbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ok"
        android:src="@drawable/ic_action_user_add"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <ImageButton
        android:id="@+id/cleanfields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ok"
        android:src="@drawable/ic_action_refresh"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/addbutton" />

    <EditText
        android:id="@+id/AgePetField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:hint="@string/MainPetsField2"
        android:layout_below="@+id/NamePetField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/WeightPetField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:hint="@string/WeightPetString"
        android:layout_below="@+id/AgePetField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
